完善用户登录（中）

--- a/md/ch11-用户登录【中】.md
+++ b/md/ch11-用户登录【中】.md
@@ -233,3 +233,259 @@ request({
 - 需要传入 `url` 参数，`axios.get` 方法的第一个参数是 `url`
 - 需要传入 `method` 参数，`axios.get` 方法表示发起 `get` 请求
 
+### axios 请求拦截器
+
+上述代码完成了基本请求的功能，下面我们需要为 `http` 请求的 `headers` 中添加 `token`，同时进行白名单校验，如：`/login` 不需要添加 `token`，并实现异步捕获和自定义处理：
+
+```js
+const whiteUrl = [ '/login', '/book/home/v2' ]
+const url = '/book/home/v2'
+const request = axios.create({
+  baseURL: 'https://test.youbaobao.xyz:18081',
+  timeout: 5000
+})
+request.interceptors.request.use(
+  config => {
+    // throw new Error('error...')
+    const url = config.url.replace(config.baseURL, '')
+      if (whiteUrl.some(wl => url === wl)) {
+        return config
+      }
+    config.headers['token'] = 'abcd'
+    return config
+  },
+  error => {
+    return Promise.reject(error)
+  }
+)
+request({
+  url, 
+  method: 'get',
+  params: {
+    openId: '1234'
+  }
+}).catch(err => {
+  console.log(err)
+})
+```
+
+![](https://gitee.com/lilyn/pic/raw/master/js-img/axios请求拦截器mooc.png)
+
+这里核心是调用了 `request.interceptors.request.use` 方法，即 `axios` 的请求拦截器，该方法需要传入两个参数
+
+- 第一个参数是拦截器方法，包含一个 `config` 参数，我们可以在这个方法中修改 `config` 并进行回传
+- 第二个参数是异常处理方法，我们可以使用 `Promise.reject(error)` 将异常返回给用户进行处理，所以我们在 `request` 请求后可以通过 `catch` 捕获异常进行自定义处理
+
+### axios 响应拦截器
+
+在实际开发中除了需要保障 http `statusCode` 为 200，还需要保证业务代码正确，上述案例
+
+- 如果 `error_code` 为 0 时，表示业务正常
+- 如果返回值不为 0，这说明业务处理错误，此时我们通过 `request.interceptors.response.use` 方法定义响应拦截器，它仍然需要 2 个参数，与请求拦截器类似
+
+```js
+request.interceptors.response.use(
+  response => {
+    const res = response.data
+    if (res.error_code != 0) {
+      alert(res.msg)
+      return Promise.reject(new Error(res.msg))
+    } else {
+      return res
+    }
+  },
+  error => {
+    return Promise.reject(error)
+  }
+)
+```
+
+![](https://gitee.com/lilyn/pic/raw/master/js-img/axios响应拦截器mooc.png)
+
+### request 库源码分析
+
+```js
+import axios from 'axios'
+import { MessageBox, Message } from 'element-ui'
+import store from '@/store'
+import { getToken } from '@/utils/auth'
+
+const service = axios.create({
+  baseURL: process.env.VUE_APP_BASE_API,
+  timeout: 5000
+})
+
+service.interceptors.request.use(
+  config => {
+    // 如果存在 token 则附带在 http header 中
+    if (store.getters.token) {
+      config.headers['X-Token'] = getToken()
+    }
+    return config
+  },
+  error => {
+    console.log(error) // for debug
+    return Promise.reject(error)
+  }
+)
+
+service.interceptors.response.use(
+  response => {
+    const res = response.data
+
+    if (res.code !== 20000) {
+      Message({
+        message: res.message || 'Error',
+        type: 'error',
+        duration: 5 * 1000
+      })
+      // 判断 token 失效的场景
+      if (res.code === 50008 || res.code === 50012 || res.code === 50014) {
+         // 如果 token 失效，则弹出确认对话框，用户点击后，清空 token 并返回登录页面
+        MessageBox.confirm('Token已失效，是否重新登录', '确认登出', {
+          confirmButtonText: '重新登录',
+          cancelButtonText: '取消',
+          type: 'warning'
+        }).then(() => {
+          store.dispatch('user/resetToken').then(() => {
+            location.reload()
+          })
+        })
+      }
+      return Promise.reject(new Error(res.message || 'Error'))
+    } else {
+      return res
+    }
+  },
+  error => {
+    console.log('err' + error) // for debug
+    Message({
+      message: error.message,
+      type: 'error',
+      duration: 5 * 1000
+    })
+    return Promise.reject(error)
+  }
+)
+
+export default service
+```
+
+## 登录细节分析
+
+### 细节一：页面启动后自动聚焦
+
+检查用户名或密码是否为空，如果发现为空，则自动聚焦：
+
+```js
+mounted() {
+  if (this.loginForm.username === '') {
+    this.$refs.username.focus()
+  } else if (this.loginForm.password === '') {
+    this.$refs.password.focus()
+  }
+}
+```
+
+### 细节二：显示密码后自动聚焦
+
+切换密码显示状态后，自动聚焦 `password` 输入框：
+
+```js
+showPwd() {
+  if (this.passwordType === 'password') {
+    this.passwordType = ''
+  } else {
+    this.passwordType = 'password'
+  }
+  this.$nextTick(() => {
+    this.$refs.password.focus()
+  })
+}
+```
+
+### 细节三：通过 reduce 过滤对象属性
+
+直接删除 `query.redirect` 会直接改动 `query`，可以通过浅拷贝实现属性过滤
+
+- `const _query = Object.assign({}, query)`
+
+  `delete _query.redirect`
+
+```js
+watch: {
+  $route: {
+    handler: function(route) {
+      const query = route.query
+      if (query) {
+        this.redirect = query.redirect
+        this.otherQuery = this.getOtherQuery(query)
+      }
+    },
+    immediate: true
+  }
+}
+
+getOtherQuery(query) {
+  return Object.keys(query).reduce((acc, cur) => {
+    if (cur !== 'redirect') {
+      acc[cur] = query[cur]
+    }
+    return acc
+  }, {})
+}
+```
+
+## 关闭 Mock 接口
+
+去掉 `main.js` 中 `mock` 相关代码：
+
+```js
+if (process.env.NODE_ENV === 'production') {
+  const { mockXHR } = require('../mock')
+  mockXHR()
+}
+// 或
+import { mockXHR } from '../mock'
+if (process.env.NODE_ENV === 'production') {
+  mockXHR()
+}
+```
+
+删除 `src/api` 目录下的 `article.js` 和 `qiniu.js`
+
+删除 `vue.config.js` 中的相关配置：
+
+```js
+proxy: {
+  // change xxx-api/login => mock/login
+  // detail: https://cli.vuejs.org/config/#devserver-proxy
+  [process.env.VUE_APP_BASE_API]: {
+    target: `http://127.0.0.1:${port}/mock`,
+    changeOrigin: true,
+    pathRewrite: {
+      ['^' + process.env.VUE_APP_BASE_API]: ''
+    }
+  }
+},
+after: require('./mock/mock-server.js')
+// 或
+before: require('./mock/mock-server.js')
+```
+
+修改后我们的项目里就不能使用 `mock` 接口，会直接请求到 `http` 接口，我们需要配置 `hosts` 映射，让域名映射到本地 `node` 项目
+
+```bash
+127.0.0.1 book.llmysnow.top
+```
+
+**修改接口地址**
+
+我们将发布到开发环境和生产环境，所以需要修改 `.env.development` 和 `.env.production` 两个配置文件：
+
+```js
+VUE_APP_BASE_API = 'https://book.llmysnow.top:18082'
+```
+
+重新启动项目后，发现登录接口已指向我们指定的接口：`https://book.llmysnow.top:18082/vue-element-admin/user/login`
+
