完善电子书列表页面开发

--- a/md/ch13-电子书上传.md
+++ b/md/ch13-电子书上传.md
@@ -74,9 +74,11 @@ export const asyncRoutes = [
 
 - `sub-navbar` 这个 `class` 的属性在 `src\styles\index.scss` 中定义好的
 
+对能修改的 `el-form-item` 赋 `prop`
+
 ```html
 <template>
-  <el-form ref="postForm" :model="postForm" class="form-container">
+  <el-form ref="postForm" :model="postForm" class="form-container" :rules="rules">
     <sticky :sticky-top="84" :z-index="10" :class-name="'sub-navbar ' + postForm.status">
       <el-button v-if="!isEdit" @click="showGuide">显示帮助</el-button>
       <el-button
@@ -111,49 +113,49 @@ export const asyncRoutes = [
       </el-row>
       <el-row>
         <el-col :span="12">
-          <el-form-item label="作者：" :label-width="labelWidth">
+          <el-form-item prop="author" label="作者：" :label-width="labelWidth">
             <el-input v-model="postForm.author" placeholder="作者" />
           </el-form-item>
         </el-col>
         <el-col :span="12">
-          <el-form-item label="出版社：" :label-width="labelWidth">
+          <el-form-item prop="publisher" label="出版社：" :label-width="labelWidth">
             <el-input v-model="postForm.publisher" placeholder="出版社" />
           </el-form-item>
         </el-col>
       </el-row>
       <el-row>
         <el-col :span="12">
-          <el-form-item label="语言：" :label-width="labelWidth">
+          <el-form-item prop="language" label="语言：" :label-width="labelWidth">
             <el-input v-model="postForm.language" placeholder="语言" />
           </el-form-item>
         </el-col>
         <el-col :span="12">
-          <el-form-item label="根文件：" :label-width="labelWidth">
+          <el-form-item prop="rootFile" label="根文件：" :label-width="labelWidth">
             <el-input v-model="postForm.rootFile" placeholder="根文件" disabled />
           </el-form-item>
         </el-col>
       </el-row>
       <el-row>
         <el-col :span="12">
-          <el-form-item label="文件路径：" :label-width="labelWidth">
+          <el-form-item prop="filePath" label="文件路径：" :label-width="labelWidth">
             <el-input v-model="postForm.filePath" placeholder="文件路径" disabled />
           </el-form-item>
         </el-col>
         <el-col :span="12">
-          <el-form-item label="解压路径：" :label-width="labelWidth">
+          <el-form-item prop="unzipPath" label="解压路径：" :label-width="labelWidth">
             <el-input v-model="postForm.unzipPath" placeholder="解压路径" disabled />
           </el-form-item>
         </el-col>
       </el-row>
       <el-row>
         <el-col :span="12">
-          <el-form-item label="封面路径：" :label-width="labelWidth">
+          <el-form-item prop="coverPath" label="封面路径：" :label-width="labelWidth">
             <el-input v-model="postForm.coverPath" placeholder="封面路径" disabled />
           </el-form-item>
         </el-col>
         <el-col :span="12">
-          <el-form-item label="文件名称：" :label-width="labelWidth">
-            <el-input v-model="postForm.fileName" placeholder="文件名称" disabled />
+          <el-form-item prop="originalName" label="文件名称：" :label-width="labelWidth">
+            <el-input v-model="postForm.originalName" placeholder="文件名称" disabled />
           </el-form-item>
         </el-col>
       </el-row>
@@ -213,7 +215,7 @@ export default {
         filePath: '', // 文件所在路径
         unzipPath: '', // 解压文件所在路径
         coverPath: '', // 封面图片路径
-        fileName: '', // 文件名
+        originalName: '', // 文件名
         cover: '', // 封面图片URL
         contents: [] // 目录
       },
@@ -368,6 +370,7 @@ export default {
         type: 'success',
         showClose: true
       })
+      this.$emit('onRemove')
     },
     onExceed() {
       this.$message({
