--- a/md/ch14-电子书解析.md
+++ b/md/ch14-电子书解析.md
@@ -84,7 +84,7 @@ class Book {
       fs.renameSync(oldBookPath, bookPath) // 重命名文件
     }
 
-    this.filename = filename // 文件名
+    this.fileName = filename // 文件名
     this.path = `/book/${filename}${suffix}` // epub文件夹相对路径
     this.filePath = this.path // epub文件夹相对路径
     this.unzipPath = `/unzip/${filename}` // epub解压后相对路径
@@ -99,7 +99,7 @@ class Book {
     this.categoryText = '' // 分类名称
     this.language = '' // 语种
     this.unzipUrl = unzipUrl // 解压后文件夹链接
-    this.originalname = originalname // 电子书原名
+    this.originalName = originalname // 电子书原名
   }
 }
 ```
@@ -149,19 +149,22 @@ class Book {
         const handleGetImage = (err, file, mimeType) => {
           if (err) reject(err)
           const suffix = mimeType && mimeType.split('/')[1]
-          const coverPath = `${UPLOAD_PATH}/img/${this.filename}.${suffix}`
-          const coverUrl = `${UPLOAD_URL}/img/${this.filename}.${suffix}`
+          const coverPath = `${UPLOAD_PATH}/img/${this.fileName}.${suffix}`
+          const coverUrl = `${UPLOAD_URL}/img/${this.fileName}.${suffix}`
           fs.writeFileSync(coverPath, file, 'binary')
-          this.coverPath = `/img/${this.filename}`
+          this.coverPath = `/img/${this.fileName}.${suffix}`
           this.cover = coverUrl
           resolve(this)
         }
         try {
-          this.unzip()
-          this.parseContents(epub).then(({ chapters }) => {
-            this.contents = chapters
-            epub.getImage(cover, handleGetImage)
-          })
+          this.unzip() // 解压电子书
+          this.parseContents(epub)
+            .then(({ chapters, chapterTree }) => {
+              this.contents = chapters
+              this.contentsTree = chapterTree
+              epub.getImage(cover, handleGetImage) // 获取封面图片
+            })
+            .catch(err => reject(err))
         } catch (e) {
           reject(e)
         }
@@ -281,6 +284,8 @@ class Book {
    }
    console.log(flattenReduce(arr)) // [1, 2, 3, 4, 5, 6, 7]
    ```
+   
+6. 处理一下目录，格式按照 `el-tree` 数据格式来处理
 
 ```js
 const xml2js = require('xml2js').parseString
@@ -328,7 +333,7 @@ class Book {
     if (fs.existsSync(ncxFilePath)) {
       return new Promise((resolve, reject) => {
         const xml = fs.readFileSync(ncxFilePath, 'utf-8') // 读取ncx文件
-        const filename = this.filename
+        const filename = this.fileName
         // 将ncx文件从xml转为json
         xml2js(
           xml,
@@ -343,24 +348,28 @@ class Book {
               navMap.navPoint = findParent(navMap.navPoint)
               const newNavMap = flatten(navMap.navPoint) // 将目录拆分为扁平结构
               const chapters = []
-              epub.flow.forEach((chapter, index) => {
-                // 如果目录大于从ncx解析出来的数量，则直接跳过
-                if (index + 1 > newNavMap.length) return
-                const nav = newNavMap[index] // 根据index找到对应的navMap
-                chapter.text = `${UPLOAD_URL}/unzip/${this.filename}/${chapter.href}`
-                if (nav && nav.navLabel) {
-                  chapter.label = nav.navLabel.text || ''
-                } else {
-                  chapter.label = ''
-                }
-                chapter.level = nav.level
-                chapter.pid = nav.pid
-                chapter.navId = nav['$'].id
-                chapter.filename = filename
+              newNavMap.forEach((chapter, index) => {
+                const src = chapter.content['$'].src
+                chapter.id = `${src}`
+                chapter.href = `${dir}/${src}`.replace(this.unzipPath, '')
+                chapter.text = `${UPLOAD_URL}${dir}/${chapter.href}`
+                chapter.label = chapter.navLabel.text || ''
+                chapter.navId = chapter['$'].id
+                chapter.fileName = filename
                 chapter.order = index + 1
                 chapters.push(chapter)
               })
-              resolve({ chapters })
+              const chapterTree = []
+              chapters.forEach(c => {
+                c.children = []
+                if (c.pid === '') {
+                  chapterTree.push(c)
+                } else {
+                  const parent = chapters.find(_ => _.navId === c.pid)
+                  parent.children.push(c)
+                }
+              })
+              resolve({ chapters, chapterTree })
             } else {
               reject(new Error('目录解析失败，目录数为0'))
             }
@@ -374,6 +383,4 @@ class Book {
 }
 ```
 
-### 前端收到的 data
-
-![](https://gitee.com/lilyn/pic/raw/master/js-img/电子书解析上传时前端的res.png)
+![](https://gitee.com/lilyn/pic/raw/master/js-img/电子书解析上传时前端的res1.png)
